Spacing on tutorials, fix spacing on home, show lists

--- a/.docs/angular-meteor/client/stylesheets/content/angular-2.import.less
+++ b/.docs/angular-meteor/client/stylesheets/content/angular-2.import.less
@@ -15,6 +15,7 @@
 
     p {
       font-size: 1.2rem;
+      margin: 0 auto 1rem;
     }
   }
 
